--- a/Pages - Information and Revision/index.html
+++ b/Pages - Information and Revision/index.html
@@ -30,9 +30,61 @@
 			<div id="main">
 
 				<header class="major container 75%">
-			
-
-
+			Business
+			<div></div>
+			Business objectives
+<div></div>
+All businesses have objectives or aims to achieve. Their objectives may vary depending on the type of business and the situation the business is in. The most common objectives are:
+<div></div>
+Profit: Profit is what keeps a company going and is the main objective of most businesses. Normally a business will try to obtain a satisfactory level of profits so they do not have to work long hours to pay too much tax.
+Increase added value: Value added is the difference between the price and material costs of a product.
+<div></div>
+Growth: Growth can only be achieved when customers are satisfied with a business. When businesses grow they create more jobs and make them more secure when a business is larger. The status and salary of managers are increased. Growth also means that a business is able to spread risks by moving to other markets, or it is gaining a larger market share. Bigger businesses also gain cost advantages, called economies of scale.
+<div></div>
+Survival: If a business do not survive, its owners lose everything. Therefore, businesses need to focus on his objective the most when they are: starting up, competing with other businesses, or in an economic recession.
+<div></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/93Q66bOyaa0?list=PLdErSOBqdmr7tGkxFPhKPHgJAVMBsSOhO" frameborder="0" allowfullscreen></iframe>
+<div></div>
+<div>..............</div>
+Marketing
+<div></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_cfw6Odr3S4?list=PL5n_iFBAsMXn8ab1YEuV7ZwY2gmbXhPlM" frameborder="0" allowfullscreen></iframe>
+<div></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8wZAvnqzByQ?list=PL5n_iFBAsMXn8ab1YEuV7ZwY2gmbXhPlM" frameborder="0" allowfullscreen></iframe>
+<div></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Xr7916CXb6s?list=PL5n_iFBAsMXn8ab1YEuV7ZwY2gmbXhPlM" frameborder="0" allowfullscreen></iframe>
+<div></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IOjYV88yz4U?list=PL5n_iFBAsMXn8ab1YEuV7ZwY2gmbXhPlM" frameborder="0" allowfullscreen></iframe>
+<div></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/16s29aVUoqw?list=PL5n_iFBAsMXn8ab1YEuV7ZwY2gmbXhPlM" frameborder="0" allowfullscreen></iframe>
+<div>..............</div>
+The 4 P's 
+<div></div> 
+The 4 P's are Promotion, Placement, Product and Price
+<div></div> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/c68Sfs2MwOU?list=PL5n_iFBAsMXn8ab1YEuV7ZwY2gmbXhPlM" frameborder="0" allowfullscreen></iframe>
+<div></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/nDho9p0y8f8?list=PL5n_iFBAsMXn8ab1YEuV7ZwY2gmbXhPlM" frameborder="0" allowfullscreen></iframe>
+<div></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XWzv9a1p7kw?list=PL5n_iFBAsMXn8ab1YEuV7ZwY2gmbXhPlM" frameborder="0" allowfullscreen></iframe>
+<div></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2wMA-nBysE0?list=PL5n_iFBAsMXn8ab1YEuV7ZwY2gmbXhPlM" frameborder="0" allowfullscreen></iframe>
+<div>..............</div>
+Sources of finance
+<div></div>
+There are many ways to obtain finance, and they can be grouped in these ways.:
+Internal or external.
+<div></div>
+Short-term, medium-term or long-term.
+<div></div>
+Here you can find a detailed document in which many sources of finances are explained also showing wether they are interal, exteranl, short-term etc. 
+<div></div>
+<a href="https://docs.google.com/document/d/1xNTA3cwCdtuIY2RFA-EqXZL-IM0QSbp0inYB4CQzOTQ/edit?usp=sharing">Click Here</a>
+<div></div> 
+Here is an video also explaining sources of finance
+<div></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SWr_cziQC78?list=PLFhHzJB0QN4kee4AprnODGoGQIVba6Izm" frameborder="0" allowfullscreen></iframe>
+<div>..............</div>
 				</header>
 
 				
