--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<p>New Topics &nbsp;&bull;&nbsp; Revision &nbsp;&bull;&nbsp; Tasks/Tests</p>
 						<nav>
 							<ul>
-								<li><a href="C:\Users\user\Desktop\ICT\Homepage\Directive - Pages\index.html"><img src="C:\Users\user\Desktop\ICT\Homepage\assets\css\images\Compass - start button.png" width="110" height="110" /></a> 
+								<li><a href="C:\Users\user\Desktop\Business-App\Directive - Pages\index.html"><img src="C:\Users\user\Desktop\Business-App\assets\css\images\Compass - start button.png" width="110" height="110" /></a> 
 						</nav>
 					</header>
 
