--- a/Page - Syllabus/index.html
+++ b/Page - Syllabus/index.html
@@ -57,7 +57,8 @@
 </br>
 <a href="https://docs.google.com/document/d/1XH3e7L_ejBX3fvL01JTRM3AN9k3JUXfzh4kHpPhaB2Y/edit?usp=sharing">Link To Full Syllabus</a>
 
-
+<div>..............</div>
+<a href="C:\Users\user\Desktop\Business-App\Directive - Pages\index.html"><img src="images/arrow.png" alt="" /></a>
 
 
 				</header>
