--- a/Pages - Testing yourself/index.html
+++ b/Pages - Testing yourself/index.html
@@ -27,9 +27,23 @@
 			<div id="main">
 
 				<header class="major container 75%">
-					
+					Test Papers
+					<div></div>
+					you can find past papers from 2013, from which you can get to know how well you are doing, and also get an idea of how the questions will be potrayed in the exam. This might also allow you to practise for you mocks, or even you finals. 
+					<div>..................</div>
+					<a href="http://www.cie.org.uk/images/197563-june-2014-question-paper-23.pdf">2013 Paper 2 (0450/23)</a>
+							<div></div>
+					<a href="http://www.cie.org.uk/images/197527-june-2014-question-paper-22.pdf">2013 Paper 2 (0450/22)</a>
+							<div></div>
+					<a href="http://www.cie.org.uk/images/198494-june-2014-question-paper-13.pdf">2013 Paper 1 (0450/13)</a>
+							<div></div>
+					<a href="http://www.cie.org.uk/images/198630-june-2014-question-paper-12.pdf">2013 Paper 1 (0450/12)</a>
+							<div></div>
+					<a href="http://www.cie.org.uk/images/198509-june-2014-question-paper-11.pdf">2013 Paper 1 (0450/11)</a>
+							<div></div>
+<div>..................</div>
 
-
+<a href="C:\Users\user\Desktop\Business-App\Directive - Pages\index.html"><img src="images/arrow.png" alt="" /></a>
 
 				</header>
 
